--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -2,44 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!-- ##### Welcome Area Start ##### -->
-<section class="hero-section fullwidth-header" id="home">
+<!-- ##### Welcome Area Start MainPage##### -->
+<section class="hero-section fullwidth-header" id="home" style="padding-bottom:50px !important;">
 
     <!-- Hero Content -->
     <div class="hero-section-content">
 
         <div class="container ">
             <div class="row align-items-center">
+
+
                 <!-- Welcome Content -->
-                <div class="col-12 col-lg-5 col-md-12">
-                    <div class="welcome-content spe">
-                        <div class="promo-section mt-0 mb-30">
-                            <div class="integration-link">
-                                <div class="integration-icon">
-                                    <p class="badge">NEW!</p>
-                                </div>
-                                <span class="integration-text">
-                                    make your life easier with <span class="bold">
-                                        AI
-                                        Technology
-                                    </span>
-                                </span>
-                            </div>
-                        </div>
-                        <h1 class="w-text wow fadeInUp" data-wow-delay="0.2s">
-                            <span class="gradient-text cyan">
-                                새로운
-                                혁신
-                            </span><br>
-                            ASC가 앞장서겠습니다
-                        </h1>
-                        <div style="visibility: hidden;">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. assumenda dolore totam natus qui cum vel omnis voluptates. voluptates.
-                        </div>
+                <div class="text-box">
+                    <div>
+                        <h1 class="font-content-bold">AI혁신의 대가</h1>
+                        <h2>ASC가 선도합니다</h2>
+                        <h3>즐거운 추석</h3>
+                        <p>안녕하세요 여러분</p>
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-12"></div>
             </div>
         </div>
     </div>
@@ -51,16 +32,25 @@
 <!-- Start what we do section1 -->
 <section class="what-we-do section-padding-100-70" id="page1">
     <div class="container">
+        <!-- Page Move Point -->
+        <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
+             style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+            <span class="gradient-text blue">ABOUT</span>
+        </div>
+
         <div class="section-heading text-center">
-            <!-- Dream Dots -->
-            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <span class="gradient-text blue">WHO ASC IS</span>
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                회사 연혁
+            </h2>
+            <div class="row align-items-center">
+                <img src="templetes/asc/img/core-img-asc/story.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
             </div>
+        </div>
 
+        <div class="section-heading text-center">
 
-            <br>
-            <h2 class="wow fadeInUp" data-wow-delay="0.3s"
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
                 style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                 기업 소개
             </h2>
@@ -68,17 +58,9 @@
             <h5 class="wow fadeInUp" data-wow-delay="0.3s">전남지역 중소기업과 더불어 사는 세상을 만들어 가는 ASC입니다.</h5>
             <div class="row align-items-center">
 
-                <img src="templetes/asc/img/core-img-asc/intro.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
-            </div>
-        </div>
 
-        <div class="section-heading text-center">
-            <h2 class="wow fadeInUp" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                회사 연혁
-            </h2>
-            <div class="row align-items-center">
-                <img src="templetes/asc/img/core-img-asc/story.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-12 col-lg-12 img-size"><img src="templetes/asc/img/core-img-asc/intro.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
+
             </div>
         </div>
 
@@ -90,87 +72,203 @@
     </div>
 </section>
 <!-- End what we do section1 -->
-<!-- Start what we do section2 skills -->
+<!-- Start what we do section2 services -->
 <section class="what-we-do section-padding-100-70" id="page2">
     <div class="container">
+        <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
+             style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+            <span class="gradient-text blue">SERVICES</span>
+        </div>
+
+        @*page RPA*@
         <div class="section-heading text-center">
-            <!-- Dream Dots -->
-            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <span class="gradient-text blue">OUR MAIN SKILLS</span>
-            </div>
-            <h2 class="wow fadeInUp" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                핵심 기술
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_1">
+                RPA
             </h2>
 
         </div>
         <div class="clearfix"></div>
 
+
+
         <div class="row align-items-center">
-            <div class="col-12 col-lg-3">
-                <div class="row">
-                    <div class="col-lg-12 col-sm-6 col-xs-12">
-                        <div class="article hover box-shadow">
-                            <h3 class="article__title">AI-RPA</h3>
-                            <p>주문자동화와 작업지시자동화와 같은 반복적인 업무 프로세스를 자동화</p>
 
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-sm-6 col-xs-12">
-                        <div class="article hover box-shadow">
-                            <h3 class="article__title">AI-MES</h3>
-                            <!-- <div><button>더 알아보기</button></div> -->
-                            <p>수주에서 완제품 출하에 이르는 생산활동을 최적화 할 수 있는 정보 제공</p>
 
-                        </div>
-                    </div>
+            @*page RPA 개념*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">RPA(Robotic Process Automation)</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                    <p>RPA요점</p>
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6">
+            @*page RPA+BPO1*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">RPA + BPO Service</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
 
-                <div class="map-container">
-                    <img src="templetes/asc/img/core-img-asc/skills.png" class="mb-30 wow fadeInUp" alt="saas" data-wow-delay="0.3s">
+            @*page RPA+BPO2*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">RPA + BPO Effect</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
 
-            <div class="col-12 col-lg-3 ">
-                <div class="row">
 
-                    <div class="col-lg-12 col-sm-6 col-xs-12">
-                        <div class="article hover box-shadow">
-                            <h3 class="article__title">AI-CMS</h3>
-                            <p>복잡하고 다양한 기기들을 ai가 관리하고 저장된 모델을 통해 예측</p>
 
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-sm-6 col-xs-12">
-                        <div class="article hover box-shadow">
-                            <h3 class="article__title">Edge Computer</h3>
-                            <p>대량의 데이터들을 분산해서 데이터들을 처리하고 처리한 데이터를 보냄</p>
-
-                        </div>
-                    </div>
+            @*page RPA+BPO3*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">다양한 활용</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
-
             </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+        </div>
+
+
+        @*page CMS*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_2">
+                CMS
+            </h2>
 
         </div>
+
+
+
+        <div class="row align-items-center">
+
+            @*page CMS1*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">CMS(Condition Monitoring System</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+
+            @*page CMS2*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">작동원리</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+        </div>
+
+
+        @*page CHAT BOT*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_3">
+                CMS
+            </h2>
+
+        </div>
+
+
+
+        <div class="row align-items-center">
+
+            @*page CHAT BOT1*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">CHAT BOT</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+
+            @*page CHAT BOT2*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">작동원리</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+        </div>
+
+
+        @*page SMART FACTORY*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_4">
+                CMS
+            </h2>
+
+        </div>
+
+
+
+        <div class="row align-items-center">
+
+            @*page SMART FACTORY1*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">SMART FACTORY</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+
+            @*page SMART FACTORY2*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img/about3.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-content-gothic">작동원리</h1>
+                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                </div>
+            </div>
+        </div>
+
+
 
     </div>
 </section>
 <!-- End what we do section2 -->
 <!-- Start what we do section3 -->
-<section class="what-we-do section-padding-100-70" id="page3">
+<section class="what-we-do section-padding-100-70" id="#">
     <div class="container">
         <div class="section-heading text-center">
-            <!-- Dream Dots -->
-            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <span class="gradient-text blue">OUR SERVICES</span>
-            </div>
-            <h2 class="wow fadeInUp" data-wow-delay="0.3s"
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
                 style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                 지원하는 분야
             </h2>
@@ -184,7 +282,7 @@
 </section>
 <!-- End what we do section3 -->
 <!-- Start what we do section4 -->
-<section class="what-we-do section-padding-100-70" id="page4">
+<section class="what-we-do section-padding-100-70" id="page3">
     <div class="container">
         <div class="section-heading text-center">
             <!-- Dream Dots -->
@@ -215,12 +313,11 @@
 
         </div>
         <div class="clearfix"></div>
-        <div class="row align-items-center">
-            <img src="templetes/asc/img/core-img-asc/road.png" alt="없음" class="wow fadeInUp" data-wow-delay="0.3s">
-        </div>
+        
 
 
 
     </div>
 </section>
 <!-- End what we do section4 -->
+
