--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -15,10 +15,10 @@
                 <!-- Welcome Content -->
                 <div class="text-box">
                     <div>
-                        <h1 class="font-content-bold">AI혁신의 대가</h1>
-                        <h2>ASC가 선도합니다</h2>
-                        <h3>즐거운 추석</h3>
-                        <p>안녕하세요 여러분</p>
+                        <h1 class="font-content-bold" style="color:#0062FF; font-size:50px;">AI혁신의 대가</h1>
+                        <h2 class="font-content-bold" style="color:white;">안녕하세요 ASC입니다.</h2>
+                        <h5 class="font-content-mid" style="color:white;">4차 산업 혁명 이제는 막을 수 없습니다.</h5>
+                        <h6 class="font-content-thin" style="color:white;">막을 수 없다면 받아들여야 합니다. ASC는 AI컨설팅을 통해 여러분을 돕겠습니다.</h6>
                     </div>
                 </div>
             </div>
@@ -28,128 +28,187 @@
 <!-- ##### Welcome Area End ##### -->
 
 <div class="clearfix"></div>
-
-<!-- Start what we do section1 -->
-<section class="what-we-do section-padding-100-70" id="page1">
-    <div class="container">
-        <!-- Page Move Point -->
-        <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-             style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <span class="gradient-text blue">ABOUT</span>
-        </div>
-
-        <div class="section-heading text-center">
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                회사 연혁
-            </h2>
-            <div class="row align-items-center">
-                <img src="templetes/asc/img/core-img-asc/story.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
+<div class="striples-bg">
+    <!-- Start what we do section1 -->
+    <section class="what-we-do section-padding-100-70" id="page1">
+        <div class="container">
+            <!-- Page Move Point -->
+            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
+                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                <span class="gradient-text blue">ABOUT</span>
             </div>
-        </div>
 
-        <div class="section-heading text-center">
-
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                기업 소개
-            </h2>
-            <br>
-            <h5 class="wow fadeInUp" data-wow-delay="0.3s">전남지역 중소기업과 더불어 사는 세상을 만들어 가는 ASC입니다.</h5>
-            <div class="row align-items-center">
-
-
-                <div class="col-12 col-lg-12 img-size"><img src="templetes/asc/img/core-img-asc/intro.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
-
+            <div class="section-heading text-center">
+                <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    회사 연혁
+                </h2>
+                <div class="row align-items-center">
+                    <img src="templetes/asc/img/core-img-asc/story.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
+                </div>
             </div>
+
+            <div class="section-heading text-center">
+
+                <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    기업 소개
+                </h2>
+                <br>
+                <h5 class="wow fadeInUp font-content-mid" data-wow-delay="0.3s">전남지역 중소기업과 더불어 사는 세상을 만들어 가는 ASC입니다.</h5>
+                <div class="row align-items-center">
+
+
+                    <div class="col-12 col-lg-12 img-size"><img src="templetes/asc/img/core-img-asc/intro.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
+
+                </div>
+            </div>
+
+
+
+
+
+
         </div>
-
-
-
-
-
-
-    </div>
-</section>
+    </section>
+</div>
 <!-- End what we do section1 -->
 <!-- Start what we do section2 services -->
-<section class="what-we-do section-padding-100-70" id="page2">
+<!-- Start what we do section2-1 rpa -->
+
+<div class="striples-bg">
+
+    <section class="what-we-do section-padding-100-70" id="page2">
+        <div class="container">
+            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
+                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                <span class="gradient-text blue">SERVICES</span>
+            </div>
+
+            @*page RPA*@
+            <div class="section-heading text-center">
+
+                <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_1">
+                    RPA
+                </h2>
+
+            </div>
+            <div class="clearfix"></div>
+
+
+
+            <div class="row align-items-center">
+
+
+                @*page RPA 개념*@
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/rpa.jpg" />
+                </div>
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <div class="sub-title">
+                            <h1 class="font-sub-title-gothic">&nbsp;RPA(Robotic Process Automation)&nbsp;</h1>
+
+                            @*<button>더보기</button>*@
+                        </div>
+
+                        <p class="font-content-gothic">사람이 반복적으로 처리해야 하는 단순업무를 로봇 소프트웨어를 통해 자동화하는 솔루션. 인공지능 초입단계인 자동화 기술이고, 단순 프로그래밍보다 한 단계 더 복잡한 명령을 수행합니다.</p>
+                        <p class="font-content-gothic">예를 들어 사람이 직접 여러 시스템에 접속해서 화면 별 값을 입력하고 엑셀로 작업하는 복합 작업을 그대로 따라할 수 있습니다. RPA 자동화는 데이터를 캡처하고, 애플리케이션을 실행하고, 응답을 트리거 하고, 다른 시스템과 통신하여 다양한 작업을 수행합니다.</p>
+                    </div>
+                </div>
+
+                @*page STT*@
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-right">
+                    <div class="content-box2">
+                        <h1 class="font-sub-title-gothic">&nbsp;Big Data Processing AI System&nbsp;</h1>
+                        <p class="font-content-gothic">Smart Speaker에 상품명을 말하는 것 만으로 Big Data 처리가 가능합니다.</p>
+                        <p class="font-content-gothic">RFM분석이란 Recency(최근구매일), Frequency(구매빈도),<br /> Monetary(누적구매금액) 3가지 지표로 고객의 랭킹을 부여하는 기법입니다.</p>
+                        <p class="font-content-gothic">
+                            <strong>[ASC Super Realism]</strong>은 초고속 data처리 (Read,결합, matching, 검색, 집계, 계산, 출력)을 간단하게 할 수 있는 시스템입니다.<br />
+                            세계 최고 수준의 처리속도로 big data 처리기술분류 중에서 Ad hoc(즉석)처리 와 초고속 batch 처리를 실현하였습니다.<br />
+                            Non-programming을 기본 concept으로 개발하였으므로 Excel의 기본적인 기능만 이해하고 있다면, 누구든지 2시간 정도의 학습만으로도 쉽게 사용 할 수가 있습니다.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+
+                    <div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+
+                        <img src="~/templetes/asc/img/core-img-asc/stt.png" />
+                        <p style="text-align:center; font-family:'Do Hyeon', sans-serif;">ASC Super REALISM</p>
+                        <img src="~/templetes/asc/img/core-img-asc/stt2.png" />
+                        <p style="text-align:center; font-family:'Do Hyeon', sans-serif;">Data 처리 Flow</p>
+                    </div>
+
+                </div>
+
+
+
+                @*page RPA+BPO1*@
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/rpa_bpo.png" />
+
+                </div>
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <h1 class="font-sub-title-gothic">&nbsp;RPA + BPO&nbsp;</h1>
+                        <p class="font-content-gothic">
+                            <strong>RPA +BPO</strong>는 Robot과 인간이 역할을 분담하여 업무처리를 하는 고부가가치 outsourcing 서비스입니다.
+                            도입부터 운용까지의 total 진행은 물론, 운용후의 지속적인 개선에 대해서도 맡겨 주시기 바랍니다.
+                        </p>
+                        <div class="img-p-flex">
+                            <img src="~/templetes/asc/img/core-img-asc/check.png" style="width:30px; height:45px; margin-right:8px; padding-bottom:15px;">
+                            <p class="font-content-gothic">RPA를 손쉽게 도입 할 수 있다.</p>
+                        </div>
+                        <div class="img-p-flex">
+                            <img src="~/templetes/asc/img/core-img-asc/check.png" style="width:30px; height:45px; margin-right:8px; padding-bottom:15px;">
+                            <p class="font-content-gothic">Robot과 인간이 역할을 분담하여 업무처리를 하기 때문에 정해진 업무 process를 outsourcing할 수 있다.</p>
+                        </div>
+                        <div class="img-p-flex">
+                            <img src="~/templetes/asc/img/core-img-asc/check.png" style="width:30px; height:45px; margin-right:8px; padding-bottom:15px;">
+                            <p class="font-content-gothic">도입부터 운용, 또 운용 후의 업무개선까지 맡길 수 있다.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                @*page RPA+BPO2*@
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <h1 class="font-sub-title-gothic">&nbsp;RPA + BPO의 다양한 도입과 가치&nbsp;</h1>
+                        <p class="font-content-gothic">
+                            RPA는 (PC에서 수행하는 정형화된 업무처리에 대해서는) 사람과 비교해서 압도적인 처리능력을 발휘합니다.
+                            RPA+BPO라면 RPA만으로는 해결할 수 없는 비정형적인 업무처리 대응도 가능합니다.
+
+                        </p>
+                        <p class="font-content-gothic">
+                            Operation 계의 업무는 RPA+BPO에 맡기고, 조만간 닥쳐올 노동인구감소시대에 대응하여
+                            자사 직원에게는 중요 업무를 맡겨서 기업 경쟁력 향상에 유익을 줄 수 있습니다.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/rpa_bpo2.png" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+</div>
+
+<!-- End what we do section2-1 -->
+<!-- Start what we do section2-2 -->
+
+<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_2">
     <div class="container">
-        <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-             style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <span class="gradient-text blue">SERVICES</span>
-        </div>
-
-        @*page RPA*@
-        <div class="section-heading text-center">
-
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_1">
-                RPA
-            </h2>
-
-        </div>
-        <div class="clearfix"></div>
-
-
-
-        <div class="row align-items-center">
-
-
-            @*page RPA 개념*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-content-gothic">RPA(Robotic Process Automation)</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                    <p>RPA요점</p>
-                </div>
-            </div>
-
-            @*page RPA+BPO1*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-content-gothic">RPA + BPO Service</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-
-            @*page RPA+BPO2*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-content-gothic">RPA + BPO Effect</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                </div>
-            </div>
-
-
-
-            @*page RPA+BPO3*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-content-gothic">다양한 활용</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-        </div>
-
 
         @*page CMS*@
         <div class="section-heading text-center" style="margin-top:100px;">
 
             <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_2">
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                 CMS
             </h2>
 
@@ -162,7 +221,7 @@
             @*page CMS1*@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-content-gothic">CMS(Condition Monitoring System</h1>
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;CMS(Condition Monitoring System)&nbsp;&nbsp;</h1>
                     <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
@@ -176,7 +235,7 @@
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-content-gothic">작동원리</h1>
+                    <h1 class="font-sub-title-gothic">작동원리</h1>
                     <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
@@ -188,7 +247,7 @@
 
             <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
                 style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_3">
-                CMS
+                CHAT BOT
             </h2>
 
         </div>
@@ -200,7 +259,7 @@
             @*page CHAT BOT1*@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-content-gothic">CHAT BOT</h1>
+                    <h1 class="font-sub-title-gothic">CHAT BOT</h1>
                     <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
@@ -214,7 +273,7 @@
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-content-gothic">작동원리</h1>
+                    <h1 class="font-sub-title-gothic">작동원리</h1>
                     <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
@@ -226,7 +285,7 @@
 
             <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
                 style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_4">
-                CMS
+                SMART FACTORY
             </h2>
 
         </div>
@@ -238,7 +297,7 @@
             @*page SMART FACTORY1*@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-content-gothic">SMART FACTORY</h1>
+                    <h1 class="font-sub-title-gothic">SMART FACTORY</h1>
                     <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
@@ -252,7 +311,7 @@
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-content-gothic">작동원리</h1>
+                    <h1 class="font-sub-title-gothic">작동원리</h1>
                     <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
                 </div>
             </div>
@@ -263,6 +322,7 @@
     </div>
 </section>
 <!-- End what we do section2 -->
+
 <!-- Start what we do section3 -->
 <section class="what-we-do section-padding-100-70" id="#">
     <div class="container">
@@ -313,11 +373,10 @@
 
         </div>
         <div class="clearfix"></div>
-        
+
 
 
 
     </div>
 </section>
 <!-- End what we do section4 -->
-
