--- a/Asc/wwwroot/css/asc.css
+++ b/Asc/wwwroot/css/asc.css
@@ -31,12 +31,23 @@
     font-weight: 300;
 }
 
-.font-content-gothic{
-    color:black;
-    font-size:22px;
+.font-sub-title-gothic {
+    background-color: #0062FF;
+    color: white;
+    font-family: 'Nanum gothic', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
 }
 
+.font-content-gothic {
+    font-family: 'Nanum gothic', sans-serif;
+    font-size:17px;
+    font-weight:400;
+}
 
+strong {
+    color: #0062FF;
+}
 
 
 /*메인화면 텍스트 문구*/
@@ -59,14 +70,33 @@
     align-items:flex-start;
 }
 
+.content-box2 {
+    width: 100%;
+    height: 475px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .space-box{
     width:auto;
     height:50px;
 }
  
-.text-box > div > h1 {
-    /* color:black;*/
+
+.sub-title{
+    display:flex;
 }
+
+
+.img-p-flex{
+    display:flex;
+    margin-left:30px;
+    margin-bottom:10px;
+    margin-top:10px;
+    align-items:center;
+}
+
 
 
 
