챗봇까지 초안

--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -222,21 +222,22 @@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
                     <h1 class="font-sub-title-gothic">&nbsp;&nbsp;CMS(Condition Monitoring System)&nbsp;&nbsp;</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                    <p class="font-content-gothic">중소기업 스마트공장 관리 업무(MES운영)에서 설비 가동율 향상을 위해 사전 설비예방 관리로 설비 고장을 빅데이터 및 AI챗봇/AI스피커를 사용하여 비가동 감소를 목표로 하고 있습니다.</p>
                 </div>
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
+                <img src="~/templetes/asc/img/core-img-asc/cms.png" />
             </div>
 
             @*page CMS2*@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
+                <img src="~/templetes/asc/img/core-img-asc/cms2.png" />
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-sub-title-gothic">작동원리</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;설비별 데이터 표준화&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">제조 공정에서 생성되는 모든 데이터의 속성은 동일한 기계 장치별, 동일한 공정의 경우 수집 되는 데이터의 소수점, 단위, 측정, 면, 측정 위치 등을 기준으로 표준화</p>
+                    <p class="font-content-gothic">설비별 Data속성은 다음과 같이 ID와 데이터 속성을 저의하나, 2020년 12월 국제 표준의 CDD, ASS 등 가이드 예정</p>
                 </div>
             </div>
         </div>
@@ -258,23 +259,13 @@
 
             @*page CHAT BOT1*@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">CHAT BOT</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-
-            @*page CHAT BOT2*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
+                <img src="~/templetes/asc/img/core-img-asc/chatbot.png" />
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
-                    <h1 class="font-sub-title-gothic">작동원리</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;CHAT BOT&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">Kako SDK를 통해 제공되는 카카오톡 채널 API를 사용</p>
+                    <p class="font-content-gothic">사용자는 카카오톡을 실행하고 해당 카카오톡 채널화면으로 이동하게 되면 카카오톡 채널 화면에서 1:!채팅을 통해 상단에 보이는 기능을 이용할 수 있습니다.</p>
                 </div>
             </div>
         </div>
