스마트 팩토리 및 사이트맵 메인페이지 수정

--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -26,6 +26,55 @@
     </div>
 </section>
 <!-- ##### Welcome Area End ##### -->
+<!-- ##### Welcome Area Start MainPage##### -->
+<section class="hero-section full-width-main" id="home-2" style="padding-bottom:50px !important;">
+
+    <!-- Hero Content -->
+    <div class="hero-section-content">
+
+        <div class="container ">
+            <div class="row align-items-center">
+
+
+                <!-- Welcome Content -->
+                <div class="text-box2">
+                    <div>
+                        <h1 class="font-content-bold" style="color:#009cff; font-size:50px;">SMART FACTORY</h1>
+                        <h2 class="font-content-bold" style="color:white;">음</h2>
+                        <h5 class="font-content-mid" style="color:white;">4차 산업 혁명 이제는 막을 수 없습니다.</h5>
+                        <h6 class="font-content-thin" style="color:white;">막을 수 없다면 받아들여야 합니다. ASC는 AI컨설팅을 통해 여러분을 돕겠습니다.</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ##### Welcome Area End ##### -->
+<!-- ##### Welcome Area Start MainPage##### -->
+<section class="hero-section full-width-main2" id="home-3" style="padding-bottom:50px !important;">
+
+    <!-- Hero Content -->
+    <div class="hero-section-content">
+
+        <div class="container ">
+            <div class="row align-items-center">
+
+
+                <!-- Welcome Content -->
+                <div class="text-box3">
+                    <div>
+                        <h1 class="font-content-bold" style="color:#0062FF; font-size:50px;">AI</h1>
+                        <h2 class="font-content-bold" style="color:white;">안녕하세요 ASC입니다.</h2>
+                        <h5 class="font-content-mid" style="color:white;">4차 산업 혁명 이제는 막을 수 없습니다.</h5>
+                        <h6 class="font-content-thin" style="color:white;">막을 수 없다면 받아들여야 합니다. ASC는 AI컨설팅을 통해 여러분을 돕겠습니다.</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ##### Welcome Area End ##### -->
+
 
 <div class="clearfix"></div>
 <div class="striples-bg">
@@ -38,15 +87,7 @@
                 <span class="gradient-text blue">ABOUT</span>
             </div>
 
-            <div class="section-heading text-center">
-                <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                    회사 연혁
-                </h2>
-                <div class="row align-items-center">
-                    <img src="templetes/asc/img/core-img-asc/story.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
-                </div>
-            </div>
+
 
             <div class="section-heading text-center">
 
@@ -74,23 +115,114 @@
 </div>
 <!-- End what we do section1 -->
 <!-- Start what we do section2 services -->
-<!-- Start what we do section2-1 rpa -->
+<!-- Start what we do section2-2 -->
+<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_2">
+    <div class="container">
+        <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
+             style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+            <span class="gradient-text blue">SERVICES</span>
+        </div>
+
+        @*page SMART FACTORY*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_1">
+                SMART FACTORY
+            </h2>
+
+        </div>
+
+        <div class="row align-items-center">
+
+            @*page SMART FACTORY1*@
+            
+            <div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="row" style="justify-content:center;">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;업종별 제조공장을 위한 지능형 클라우드 기반 스마트공장 플랫폼 구축&nbsp;&nbsp;</h1>
+                    <img src="~/templetes/asc/img/core-img-asc/smart1.png" />
+
+
+                </div>
+        </div>
+
+        <div class="row align-items-center">
+            @*page SMART FACTORY2*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img-asc/smart2.png" />
+            </div>
+
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;지능형 업종별 스마트공장&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">전남지역/ 두개업종(식품/어업)/매출규모 50억 미만/B2C 업체를 대상으로 RPA 관리업무 자동화 및 지능형 설비예지보전을 구축하여 원가절감을 목표로 합니다.</p>
+                    <a href="templetes/asc/img/core-img-asc/asc_company.pdf" download="asc_company" class="wow fadeInUp" data-wow-delay="0.3s">상세 정보</a>
+                </div>
+            </div>
+
+
+        </div>
+
+        @*page CMS*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_2">
+                설비예지보존
+            </h2>
+
+        </div>
+
+
+
+        <div class="row align-items-center">
+
+            @*page CMS1*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;설비예지보존&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">중소기업 스마트공장 관리 업무(MES운영)에서 설비 가동율 향상을 위해 사전 설비예방 관리로 설비 고장을 빅데이터 및 AI챗봇/AI스피커를 사용하여 비가동 감소를 목표로 하고 있습니다.</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img-asc/cms.png" />
+            </div>
+
+            @*page CMS2*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img-asc/cms2.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;설비별 데이터 표준화&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">제조 공정에서 생성되는 모든 데이터의 속성은 동일한 기계 장치별, 동일한 공정의 경우 수집 되는 데이터의 소수점, 단위, 측정, 면, 측정 위치 등을 기준으로 표준화</p>
+                    <p class="font-content-gothic">설비별 Data속성은 다음과 같이 ID와 데이터 속성을 저의하나, 2020년 12월 국제 표준의 CDD, ASS 등 가이드 예정</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+
+
+
+
+<!-- Start what we do section2-3 rpa -->
 
 <div class="striples-bg">
 
     <section class="what-we-do section-padding-100-70" id="page2">
         <div class="container">
-            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <span class="gradient-text blue">SERVICES</span>
-            </div>
+
 
             @*page RPA*@
             <div class="section-heading text-center">
 
                 <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_1">
-                    RPA
+                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_3">
+                    계획자동화
                 </h2>
 
             </div>
@@ -192,149 +324,43 @@
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                     <img src="~/templetes/asc/img/core-img-asc/rpa_bpo2.png" />
                 </div>
+
+                @*page CHAT BOT*@
+
+                <div class="row align-items-center">
+
+                    @*page CHAT BOT1*@
+                    <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                        <img src="~/templetes/asc/img/core-img-asc/chatbot.png" />
+                    </div>
+                    <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                        <div class="content-box">
+                            <h1 class="font-sub-title-gothic">&nbsp;&nbsp;CHAT BOT&nbsp;&nbsp;</h1>
+                            <p class="font-content-gothic">Kako SDK를 통해 제공되는 카카오톡 채널 API를 사용</p>
+                            <p class="font-content-gothic">사용자는 카카오톡을 실행하고 해당 카카오톡 채널화면으로 이동하게 되면 카카오톡 채널 화면에서 1:!채팅을 통해 상단에 보이는 기능을 이용할 수 있습니다.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
 </div>
 
-<!-- End what we do section2-1 -->
-<!-- Start what we do section2-2 -->
-
-<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_2">
-    <div class="container">
-
-        @*page CMS*@
-        <div class="section-heading text-center" style="margin-top:100px;">
-
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                CMS
-            </h2>
-
-        </div>
-
-
-
-        <div class="row align-items-center">
-
-            @*page CMS1*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;CMS(Condition Monitoring System)&nbsp;&nbsp;</h1>
-                    <p class="font-content-gothic">중소기업 스마트공장 관리 업무(MES운영)에서 설비 가동율 향상을 위해 사전 설비예방 관리로 설비 고장을 빅데이터 및 AI챗봇/AI스피커를 사용하여 비가동 감소를 목표로 하고 있습니다.</p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img-asc/cms.png" />
-            </div>
-
-            @*page CMS2*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img-asc/cms2.png" />
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;설비별 데이터 표준화&nbsp;&nbsp;</h1>
-                    <p class="font-content-gothic">제조 공정에서 생성되는 모든 데이터의 속성은 동일한 기계 장치별, 동일한 공정의 경우 수집 되는 데이터의 소수점, 단위, 측정, 면, 측정 위치 등을 기준으로 표준화</p>
-                    <p class="font-content-gothic">설비별 Data속성은 다음과 같이 ID와 데이터 속성을 저의하나, 2020년 12월 국제 표준의 CDD, ASS 등 가이드 예정</p>
-                </div>
-            </div>
-        </div>
-
-
-        @*page CHAT BOT*@
-        <div class="section-heading text-center" style="margin-top:100px;">
-
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_3">
-                CHAT BOT
-            </h2>
-
-        </div>
-
-
-
-        <div class="row align-items-center">
-
-            @*page CHAT BOT1*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img-asc/chatbot.png" />
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;CHAT BOT&nbsp;&nbsp;</h1>
-                    <p class="font-content-gothic">Kako SDK를 통해 제공되는 카카오톡 채널 API를 사용</p>
-                    <p class="font-content-gothic">사용자는 카카오톡을 실행하고 해당 카카오톡 채널화면으로 이동하게 되면 카카오톡 채널 화면에서 1:!채팅을 통해 상단에 보이는 기능을 이용할 수 있습니다.</p>
-                </div>
-            </div>
-        </div>
-
-
-        @*page SMART FACTORY*@
-        <div class="section-heading text-center" style="margin-top:100px;">
-
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_4">
-                SMART FACTORY
-            </h2>
-
-        </div>
-
-
-
-        <div class="row align-items-center">
-
-            @*page SMART FACTORY1*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">SMART FACTORY</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                </div>
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-
-            @*page SMART FACTORY2*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img/about3.png" />
-            </div>
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">작동원리</h1>
-                    <p>인생은 여러길로 간다 그 내용은 어디로 가는지 모르는 흐르는 강물과 같다 어디로 가는걸까 이디자인은</p>
-                </div>
-            </div>
-        </div>
-
-
-
-    </div>
-</section>
+<!-- End what we do section2-3 -->
 <!-- End what we do section2 -->
-
-<!-- Start what we do section3 -->
-<section class="what-we-do section-padding-100-70" id="#">
-    <div class="container">
-        <div class="section-heading text-center">
-
-            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                지원하는 분야
-            </h2>
-            <a href="templetes/asc/img/core-img-asc/asc_company.pdf" download="asc_company" class="wow fadeInUp" data-wow-delay="0.3s">회사 소개서 다운로드</a>
-        </div>
-        <div class="clearfix"></div>
-
-
-
-    </div>
-</section>
-<!-- End what we do section3 -->
 <!-- Start what we do section4 -->
 <section class="what-we-do section-padding-100-70" id="page3">
     <div class="container">
+        <div class="section-heading text-center">
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                회사 연혁
+            </h2>
+            <div class="row align-items-center">
+                <img src="templetes/asc/img/core-img-asc/story.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s">
+            </div>
+        </div>
         <div class="section-heading text-center">
             <!-- Dream Dots -->
             <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
@@ -363,6 +389,7 @@
 
 
         </div>
+
         <div class="clearfix"></div>
 
 
