--- a/Asc/Views/Shared/_Layout.cshtml
+++ b/Asc/Views/Shared/_Layout.cshtml
@@ -83,10 +83,12 @@
                                 <li>
                                     <a href="#page2" class="font-nav">SERVICES</a>
                                     <ul class="dropdown">
-                                        <li><a href="#page2_1" class="font-nav-sub">RPA</a></li>
-                                        <li><a href="#page2_2" class="font-nav-sub">CMS</a></li>
-                                        <li><a href="#page2_3" class="font-nav-sub">CHAT BOT</a></li>
-                                        <li><a href="#page2_4" class="font-nav-sub">SMART FACTORY</a></li>
+                                        <li><a href="#page2_1" class="font-nav-sub">SMART FACTORY</a></li>
+                                        <li><a href="#page2_2" class="font-nav-sub">설비예지보전</a></li>
+                                        <li><a href="#page2_3" class="font-nav-sub">계획자동화</a></li>
+                                        <li><a href="#page2_4" class="font-nav-sub">공정지능화</a></li>
+                                        <li><a href="#" class="font-nav-sub">검사지능화</a></li>
+                                        <li><a href="#" class="font-nav-sub">설계지능화</a></li>
                                     </ul>
                                   
                                 </li>
