--- a/Asc/wwwroot/css/asc.css
+++ b/Asc/wwwroot/css/asc.css
@@ -60,6 +60,25 @@ strong {
     justify-content: flex-end;
     align-items: initial;
 }
+.text-box2 {
+    /*background-color:white;*/
+    height: 550px;
+    width: 1100px;
+    padding-top: 50px;
+    display: flex;
+    justify-content:flex-end;
+    align-items:flex-end;
+    text-align:right;
+}
+.text-box3 {
+    /*background-color:white;*/
+    height: 550px;
+    width: 1100px;
+    padding-top: 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
 
 .content-box {
     padding-top:50px;
@@ -97,13 +116,82 @@ strong {
     align-items:center;
 }
 
-
-
-
 .img-size{
     width:250px;
     height:400px;
 }
 
+/*배경*/
+.hero-section.full-width-main {
+    padding-top: 100px;
+    padding-bottom: 405px;
+    background-image: url(../templetes/asc/img/core-img-asc/smart-factory.png);
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.hero-section.full-width-main .special-head.dark {
+    padding-left: 0
+}
+
+    .hero-section.full-width-main .special-head.dark:before {
+        display: none;
+    }
 
 
+
+@media (max-width: 991px) {
+    .hero-section.full-width-main {
+        padding-bottom: 0px;
+        background-image: url(../img/bg-img/header-bg3-min.png);
+        background-position: top center;
+        background-size: cover;
+        padding-top: 0
+    }
+
+    .special-pb {
+        padding-bottom: 100px
+    }
+
+    .welcome-content.spe {
+        margin-top: 0 !important
+    }
+}
+
+.hero-section.full-width-main2 {
+    padding-top: 100px;
+    padding-bottom: 405px;
+    background-image: url(../templetes/asc/img/core-img-asc/ai-bg2.jpg);
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+    .hero-section.full-width-main2 .special-head.dark {
+        padding-left: 0
+    }
+
+        .hero-section.full-width-main2 .special-head.dark:before {
+            display: none;
+        }
+
+
+
+@media (max-width: 991px) {
+    .hero-section.full-width-main2 {
+        padding-bottom: 0px;
+        background-image: url(../img/bg-img/header-bg3-min.png);
+        background-position: top center;
+        background-size: cover;
+        padding-top: 0
+    }
+
+    .special-pb {
+        padding-bottom: 100px
+    }
+
+    .welcome-content.spe {
+        margin-top: 0 !important
+    }
+}
